--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
+    "@angular/material": "^2.0.0-beta.1",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@angular2-material/card": "^2.0.0-alpha.8-2",
+    "angular": "^1.6.2",
+    "angular-material": "^1.1.3",
     "core-js": "^2.4.1",
+    "material": "^0.1.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
