--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "angular": "^1.6.2",
     "angular-material": "^1.1.3",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "material": "^0.1.1",
+    "ng2-datepicker": "^1.4.10",
+    "ng2-datepicker-bootstrap": "^0.1.2",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
