--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "nodemon src/server.js",
     "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
@@ -26,10 +26,12 @@
     "angular": "^1.6.2",
     "angular-material": "^1.1.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.1",
     "hammerjs": "^2.0.8",
     "material": "^0.1.1",
     "ng2-datepicker": "^1.4.10",
     "ng2-datepicker-bootstrap": "^0.1.2",
+    "primeng": "^2.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
