--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "@angular2-material/card": "^2.0.0-alpha.8-2",
     "angular": "^1.6.2",
     "angular-material": "^1.1.3",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "cors": "^2.8.1",
     "hammerjs": "^2.0.8",
     "material": "^0.1.1",
-    "ng2-datepicker": "^1.4.10",
-    "ng2-datepicker-bootstrap": "^0.1.2",
     "primeng": "^2.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
