--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.1",
     "hammerjs": "^2.0.8",
     "material": "^0.1.1",
+    "nodemon": "^1.11.0",
     "primeng": "^2.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
