--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@angular2-material/card": "^2.0.0-alpha.8-2",
     "angular": "^1.6.2",
     "angular-material": "^1.1.3",
@@ -34,6 +37,7 @@
     "primeng": "^2.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
+    "typescript": "^2.2.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
