--- a/package.json
+++ b/package.json
@@ -1,63 +1,68 @@
 {
-  "name": "brief-manager",
-  "version": "0.0.0",
-  "license": "MIT",
-  "angular-cli": {},
-  "scripts": {
-    "ng": "ng",
-    "start": "nodemon src/server.js",
-    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
-    "test": "ng test",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^4.0.1",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/compiler-cli": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/platform-server": "^4.0.1",
-    "@angular/router": "^4.0.1",
-    "@angular2-material/card": "^2.0.0-alpha.8-2",
-    "angular": "^1.6.2",
-    "angular-material": "^1.1.3",
-    "chart.js": "^2.5.0",
-    "core-js": "^2.4.1",
-    "cors": "^2.8.1",
-    "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
-    "material": "^0.1.1",
-    "mongoose": "^4.9.7",
-    "nodemon": "^1.11.0",
-    "primeng": "^2.0.6",
-    "rxjs": "^5.0.1",
-    "ts-helpers": "^1.1.1",
-    "typescript": "^2.2.2",
-    "zone.js": "^0.8.5"
-  },
-  "devDependencies": {
-    "@angular/cli": "^1.0.0",
-    "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "codelyzer": "~2.0.0-beta.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
-  }
+    "name": "brief-manager",
+    "version": "0.0.0",
+    "license": "MIT",
+    "engines": {
+        "node": "7.5.0",
+        "npm": "4.1.2"
+    },
+    "angular-cli": {},
+    "scripts": {
+        "ng": "ng",
+        "start": "nodemon src/server.js",
+        "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
+        "test": "ng test",
+        "pree2e": "webdriver-manager update --standalone false --gecko false",
+        "e2e": "protractor"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^4.0.1",
+        "@angular/common": "^4.0.1",
+        "@angular/compiler": "^4.0.1",
+        "@angular/compiler-cli": "^4.0.1",
+        "@angular/core": "^4.0.1",
+        "@angular/forms": "^4.0.1",
+        "@angular/http": "^4.0.1",
+        "@angular/material": "^2.0.0-beta.1",
+        "@angular/platform-browser": "^4.0.1",
+        "@angular/platform-browser-dynamic": "^4.0.1",
+        "@angular/platform-server": "^4.0.1",
+        "@angular/router": "^4.0.1",
+        "@angular2-material/card": "^2.0.0-alpha.8-2",
+        "angular": "^1.6.2",
+        "angular-material": "^1.1.3",
+        "chart.js": "^2.5.0",
+        "core-js": "^2.4.1",
+        "cors": "^2.8.1",
+        "font-awesome": "^4.7.0",
+        "hammerjs": "^2.0.8",
+        "material": "^0.1.1",
+        "mongoose": "^4.9.7",
+        "nodemon": "^1.11.0",
+        "primeng": "^2.0.6",
+        "rxjs": "^5.0.1",
+        "ts-helpers": "^1.1.1",
+        "typescript": "^2.2.2",
+        "@angular/cli": "^1.0.0",
+        "zone.js": "^0.8.5"
+    },
+    "devDependencies": {
+
+        "@angular/compiler-cli": "^2.3.1",
+        "@types/jasmine": "2.5.38",
+        "@types/node": "^6.0.42",
+        "codelyzer": "~2.0.0-beta.1",
+        "jasmine-core": "2.5.2",
+        "jasmine-spec-reporter": "2.5.0",
+        "karma": "1.2.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-cli": "^1.0.1",
+        "karma-jasmine": "^1.0.2",
+        "karma-remap-istanbul": "^0.2.1",
+        "protractor": "~4.0.13",
+        "ts-node": "1.2.1",
+        "tslint": "^4.3.0",
+        "typescript": "~2.0.3"
+    }
 }
